# src/docs/swagger.json
@@ -1523,76 +1523,6 @@
                     }
                 }
             }
-        },
-        "/login": {
-            "post": {
-                "summary": "Autentica usuario no sistema",
-                "description": "essa rota será responsável por autenticaçao do usuario",
-                "tags": ["Auth"],
-                "requestBody": {
-                    "content": {
-                        "application/json; charset=utf-8": {
-                            "schema": {
-                                "properties": {
-                                    "username": {
-                                        "type": "string"
-                                    },
-                                    "password": {
-                                        "type": "string"
-                                    }
-                                }
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "422": {
-                        "description": "Dados invalidos"
-                    },
-                    "500": {
-                        "description": "Erro! contate o administrador do sistema"
-                    },
-                    "400": {
-                        "description": "Erro ao processar requisição"
-                    },
-                    "403": {
-                        "description": "Não autorizado"
-                    },
-                    "200": {
-                        "description": "Ok",
-                        "content": {
-                            "aplication/json": {
-                                "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "access_token": {
-                                            "type": "string"
-                                        },
-                                        "expires_in": {
-                                            "type": "number"
-                                        },
-                                        "refresh_expires_in": {
-                                            "type": "number"
-                                        },
-                                        "refresh_token": {
-                                            "type": "string"
-                                        },
-                                        "token_type": {
-                                            "type": "string"
-                                        },
-                                        "session_state": {
-                                            "type": "string"
-                                        },
-                                        "scope": {
-                                            "type": "string"
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
         }
     },
 
